--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -42,6 +42,18 @@
   position: absolute;
 }
 
+@media only screen and (max-width: 340px) {
+  .mapouter .header {
+    margin-top: 30px;
+  }
+}
+
+@media only screen and (min-width: 321px) and (orientation:landscape) {
+  .mapouter {
+    height: 220vh;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1005px) {
   .mapouter .header {
     font-size: 54px;
